upload all files

--- a/products/polishing/brass-electropolishing-solution.html
+++ b/products/polishing/brass-electropolishing-solution.html
@@ -7,6 +7,7 @@
   <title data-i18n-key="meta_title">Laser B — น้ำยากัด/จุ่มเงาทองเหลือง | Baume Chemical</title>
   <meta name="description" content="Laser B สารเข้มข้นเชิงกรดสำหรับกำจัดออกไซด์/คราบแดงและให้ผิวเงาบนทองเหลือง ไนตริกฟรี ไม่มีควันพิษ จุ่ม 1–3 นาที ใช้ได้ทั้งแร็ค/บาร์เรล ควบคุม pH &lt;2">
   <meta name="robots" content="index,follow,max-image-preview:large">
+  <link rel="canonical" href="https://www.baumechemical.com/products/polishing/brass-electropolishing-solution.html">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph -->
@@ -14,6 +15,7 @@
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" content="Laser B — Brass Bright Etch/Deoxidizer">
   <meta property="og:description" content="Nitric-free bright etch for brass. Removes oxide & red smut, gives durable luster. Dip 1–3 min, rack & barrel ready.">
+  <meta property="og:url" content="https://www.baumechemical.com/products/polishing/brass-electropolishing-solution.html">
   <meta property="og:image" content="https://i.imgur.com/wEo6YIQ.jpeg">
   <meta name="twitter:card" content="summary_large_image">
 
