--- a/products/polishing/stainless-electropolishing-solution.html
+++ b/products/polishing/stainless-electropolishing-solution.html
@@ -7,6 +7,7 @@
   <title data-i18n-key="meta_title">EP 8511 — น้ำยากัดเงาสแตนเลส (Electropolishing) | Baume Chemical</title>
   <meta name="description" content="EP 8511 สำหรับกัดเงา/ขัดผิวสแตนเลสให้เรียบเนียนเงา (คล้ายกระจก) ไม่ติดไฟ ไม่ระเบิด ปราศจากฮาโลเจน/โครเมต ทำงาน 50–80 °C, 4–9 V, 15–45 A/dm², 3–10 นาที พร้อมขั้นตอน การดูแล และ EHS">
   <meta name="robots" content="index,follow,max-image-preview:large">
+  <link rel="canonical" href="https://www.baumechemical.com/products/polishing/stainless-electropolishing-solution.html">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph -->
@@ -14,6 +15,7 @@
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" content="EP 8511 — Stainless Steel Electropolishing">
   <meta property="og:description" content="Mirror-like gloss, wide operating window, halogen/chromate-free. 50–80 °C • 4–9 V • 15–45 A/dm² • 3–10 min.">
+  <meta property="og:url" content="https://www.baumechemical.com/products/polishing/stainless-electropolishing-solution.html">
   <meta property="og:image" content="https://i.imgur.com/RJXWvbW.jpeg">
   <meta name="twitter:card" content="summary_large_image">
 
