--- a/products/polishing/zinc-electropolishing-solution.html
+++ b/products/polishing/zinc-electropolishing-solution.html
@@ -7,6 +7,7 @@
   <title data-i18n-key="meta_title">ACITEK MZ-52 — จุ่มเงาบนซิ้งค์ | Baume Chemical</title>
   <meta name="description" content="ACITEK MZ-52 น้ำยาจุ่มเงาบนซิ้งค์/ซิ้งค์ฉีด ช่วยกำจัดออกไซด์ คราบสกปรก และปรับผิวให้เงางาม พร้อมก่อนชุบ ใช้เข้มข้น 30–50% ที่ 70–80 °C 2–3 นาที">
   <meta name="robots" content="index,follow,max-image-preview:large">
+  <link rel="canonical" href="https://www.baumechemical.com/products/polishing/zinc-electropolishing-solution.html">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph -->
@@ -14,6 +15,7 @@
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" content="ACITEK MZ-52 — Zinc/Zamak Bright Dip">
   <meta property="og:description" content="Bright-dip for zinc & zinc die-cast: removes oxides/soil, improves brightness & adhesion. 30–50% at 70–80 °C for ~2–3 min.">
+  <meta property="og:url" content="https://www.baumechemical.com/products/polishing/zinc-electropolishing-solution.html">
   <meta property="og:image" content="https://i.imgur.com/KmCDo7F.png">
   <meta name="twitter:card" content="summary_large_image">
 
