--- a/404.html
+++ b/404.html
@@ -32,41 +32,68 @@
     }
     *{box-sizing:border-box} html,body{margin:0}
     body{font-family:'Noto Sans Thai',system-ui,sans-serif;background:var(--bg);color:var(--ink);line-height:1.7}
+    html{scroll-padding-top:calc(var(--header-h) + 8px)}
+    [hidden]{display:none !important}
 
-    /* Header (overlay) */
+    /* ===== Header: Nickel style (sticky, gradient, white text) ===== */
     .site-header{
-      position:absolute; inset:0 auto auto 0; right:0; z-index:1400;
+      position:sticky; top:0; left:0; right:0; z-index:1400;
       background:linear-gradient(180deg, rgba(4,10,22,.66), rgba(4,10,22,0));
       border-bottom:1px solid rgba(255,255,255,.12);
-      -webkit-backdrop-filter: blur(4px); backdrop-filter: blur(4px);
+      transition:background .2s ease, box-shadow .2s ease, border-color .2s ease;
+      -webkit-backdrop-filter: blur(6px); backdrop-filter: blur(6px);
+    }
+    .site-header.scrolled{
+      background:#0f172acc; border-color:rgba(255,255,255,.2); box-shadow:0 6px 22px rgba(2,8,20,.18);
     }
     .header-inner{max-width:var(--container); margin:0 auto; min-height:var(--header-h);
       display:flex; align-items:center; justify-content:space-between; padding:10px 16px;}
     .brand{display:flex; align-items:center; gap:10px; text-decoration:none}
     .brand-logo{width:44px;height:44px;border-radius:10px;flex:0 0 44px;background:#dfe9e3 var(--logo-url) center/cover no-repeat; box-shadow:0 2px 9px rgba(2,8,20,.14)}
     .brand-name{font-weight:800; color:#fff; font-size:1.04rem; letter-spacing:.2px}
-    .primary-nav .menu{list-style:none; display:flex; gap:6px; margin:0; padding:0}
+
+    .header-right{display:flex; align-items:center; gap:10px}
+    .primary-nav{display:flex; align-items:center}
+    .menu{list-style:none; display:flex; gap:6px; margin:0; padding:0}
     .menu a{display:inline-block; padding:10px 12px; border-radius:12px; color:#fff; text-decoration:none; font-weight:700; letter-spacing:.2px}
     .menu a:hover{ background:rgba(255,255,255,.12) }
+    .menu a[aria-current="page"]{ background:rgba(255,255,255,.18) }
+
+    /* Desktop language switcher (beside menu) */
+    .lang-inline{display:none; align-items:center; gap:6px; padding:4px; border:1px solid rgba(255,255,255,.28); border-radius:999px; background:rgba(255,255,255,.12)}
+    .lang-inline .lang-btn{appearance:none; border:0; background:transparent; cursor:pointer; padding:6px 10px; border-radius:999px; font-weight:800; display:flex; align-items:center; gap:6px; color:#fff}
+    .lang-inline .lang-btn[aria-pressed="true"]{ background:#fff; color:#0f172a }
+    .flag{ width:18px; height:14px; border-radius:2px; object-fit:cover; box-shadow:0 0 0 1px rgba(0,0,0,.08) }
+
+    /* Mobile dropdown (slide-down) */
     .nav-toggle{appearance:none; border:0; background:transparent; cursor:pointer; width:38px;height:38px;border-radius:9px;display:none; align-items:center; justify-content:center}
+    .nav-toggle:focus-visible{ outline:2px solid #ffffff; outline-offset:2px }
     .nav-toggle .bar{ position:relative; width:22px; height:2px; background:#fff; border-radius:2px }
     .nav-toggle .bar::before,.nav-toggle .bar::after{ content:""; position:absolute; left:0; right:0; height:2px; background:#fff; border-radius:2px }
     .nav-toggle .bar::before{ top:-7px } .nav-toggle .bar::after{ top:7px }
 
-    @media (max-width:920px){
+    .menu .lang-li{display:none; margin-top:6px; padding:10px; border-top:1px solid rgba(255,255,255,.18)}
+    .menu .lang-li .lang-group{display:flex; gap:6px; padding:4px; border-radius:999px; background:rgba(255,255,255,.12); border:1px solid rgba(255,255,255,.28)}
+    .menu .lang-li .lang-btn{appearance:none;border:0;background:transparent;cursor:pointer;padding:6px 10px;border-radius:999px;font-weight:800;color:#fff;display:flex;align-items:center;gap:6px}
+    .menu .lang-li .lang-btn[aria-pressed="true"]{background:#fff;color:#0f172a}
+
+    @media (min-width: 921px){ .lang-inline{display:flex} .menu .lang-li{display:none} }
+    @media (max-width: 920px){
       .menu{
         position:fixed; left:12px; right:12px; top:calc(var(--header-h) + 10px);
         background:#0f172acc; -webkit-backdrop-filter: blur(10px); backdrop-filter: blur(10px);
         border:1px solid rgba(255,255,255,.16); border-radius:16px;
         transform:translateY(-12px); opacity:0; pointer-events:none;
-        display:grid; gap:6px; padding:12px; transition:.2s ease;
+        display:grid; gap:6px; padding:12px; transition:transform .2s, opacity .2s;
       }
       .menu li a{ display:block; padding:12px 14px; border-radius:12px }
       .site-header.open .menu{ transform:none; opacity:1; pointer-events:auto }
       .nav-toggle{ display:inline-flex }
+      .lang-inline{ display:none }
+      .menu .lang-li{display:block}
     }
 
-    /* Hero */
+    /* ===== Hero ===== */
     .hero{
       position:relative; color:#fff; text-align:center;
       min-height:clamp(520px, 70vh, 760px);
@@ -84,6 +111,12 @@
       text-shadow:0 12px 40px rgba(0,0,0,.35);
     }
     .hero p{margin:0 auto 18px; color:#dbe6ea; max-width:760px}
+
+    /* Back button on hero */
+    .back-wrap{position:absolute; left:16px; top:calc(var(--header-h) + 12px); z-index:3; display:flex; align-items:center; gap:8px}
+    .btn.back{display:inline-flex; align-items:center; gap:8px; background:#ffffff22; border:1px solid rgba(255,255,255,.55); color:#fff; padding:8px 12px; border-radius:12px; font-weight:800; text-decoration:none; backdrop-filter: blur(6px)}
+    .btn.back:hover{ background:#ffffff33 }
+    .btn.back svg{width:18px; height:18px; display:block}
 
     /* The ONLY button */
     .btn{
@@ -111,29 +144,65 @@
   </style>
 </head>
 <body>
-  <!-- HEADER -->
+  <!-- ===== HEADER (Nickel style) ===== -->
   <header class="site-header" role="banner" id="siteHeader">
     <div class="header-inner">
       <a class="brand" href="/" aria-label="Baume Chemical">
         <span class="brand-logo" aria-hidden="true"></span>
         <span class="brand-name">Baume Chemical</span>
       </a>
-      <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false">
-        <span class="bar" aria-hidden="true"></span>
-      </button>
-      <nav class="primary-nav" aria-label="Primary">
-        <ul class="menu">
-          <li><a href="https://www.baumechemical.com/index.html">Home</a></li>
-          <li><a href="https://www.baumechemical.com/about-us.html">About us</a></li>
-          <li><a href="https://www.baumechemical.com/products.html">Products</a></li>
-          <li><a href="https://www.baumechemical.com/contact-us.html">Contact Us</a></li>
-        </ul>
-      </nav>
+
+      <div class="header-right">
+        <!-- Primary Nav -->
+        <nav class="primary-nav" aria-label="Primary">
+          <ul class="menu">
+            <li><a href="https://www.baumechemical.com/index.html">Home</a></li>
+            <li><a href="https://www.baumechemical.com/about-us.html">About us</a></li>
+            <li><a href="https://www.baumechemical.com/products.html">Products</a></li>
+            <li><a href="https://www.baumechemical.com/contact-us.html">Contact Us</a></li>
+
+            <!-- Mobile: language switcher inside menu -->
+            <li class="lang-li">
+              <div class="lang-group" role="group" aria-label="Language switcher">
+                <button class="lang-btn" data-lang="th" aria-pressed="true" title="ภาษาไทย">
+                  <img class="flag" src="https://flagcdn.com/24x18/th.png" srcset="https://flagcdn.com/48x36/th.png 2x" alt="TH"><span>ไทย</span>
+                </button>
+                <button class="lang-btn" data-lang="en" aria-pressed="false" title="English">
+                  <img class="flag" src="https://flagcdn.com/24x18/gb.png" srcset="https://flagcdn.com/48x36/gb.png 2x" alt="EN"><span>EN</span>
+                </button>
+              </div>
+            </li>
+          </ul>
+        </nav>
+
+        <!-- Desktop: language switcher beside menu -->
+        <div class="lang-inline" role="group" aria-label="Language switcher">
+          <button class="lang-btn" data-lang="th" aria-pressed="true" title="ภาษาไทย">
+            <img class="flag" src="https://flagcdn.com/24x18/th.png" srcset="https://flagcdn.com/48x36/th.png 2x" alt="TH"><span>ไทย</span>
+          </button>
+          <button class="lang-btn" data-lang="en" aria-pressed="false" title="English">
+            <img class="flag" src="https://flagcdn.com/24x18/gb.png" srcset="https://flagcdn.com/48x36/gb.png 2x" alt="EN"><span>EN</span>
+          </button>
+        </div>
+
+        <!-- Hamburger -->
+        <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false">
+          <span class="bar" aria-hidden="true"></span>
+        </button>
+      </div>
     </div>
   </header>
 
-  <!-- HERO -->
+  <!-- ===== HERO ===== -->
   <section class="hero" aria-labelledby="h1">
+    <!-- Back button -->
+    <div class="back-wrap">
+      <a href="#" class="btn back" id="backBtn">
+        <svg viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M15 18l-6-6 6-6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+        <span data-i18n-key="btn_back">ย้อนกลับ</span>
+      </a>
+    </div>
+
     <div class="hero-inner">
       <div class="big404" aria-hidden="true">404</div>
       <h1 id="h1" data-i18n-key="h1">ไม่พบหน้านี้</h1>
@@ -141,14 +210,12 @@
 
       <!-- ✅ ปุ่มเดียวที่เหลือ -->
       <div class="actions">
-        <a class="btn" href="/" data-i18n-key="c1_btn_top">ไปหน้า Home</a>
+        <a class="btn" href="https://www.baumechemical.com/" data-i18n-key="c1_btn_top">ไปหน้า Home</a>
       </div>
     </div>
   </section>
 
-  <!-- ไม่มี QUICK LINKS / SEARCH / ปุ่มอื่นๆ แล้ว -->
-
-  <!-- FOOTER -->
+  <!-- ===== FOOTER ===== -->
   <footer class="site-footer">
     <div class="footer-inner">
       <div class="footer-grid">
@@ -191,32 +258,55 @@
     </div>
   </footer>
 
+  <!-- ===== Scripts ===== -->
   <script>
-    // Mobile nav + header height
+    // Sticky header state + mobile toggle + close on click
     (function(){
       const header = document.getElementById('siteHeader');
       const toggle = header?.querySelector('.nav-toggle');
+
       const setH = () => {
         const h = header ? Math.round(header.getBoundingClientRect().height) : 64;
         document.documentElement.style.setProperty('--header-h', h + 'px');
       };
-      window.addEventListener('load', setH, {once:true});
-      window.addEventListener('resize', setH);
-      setH();
+      setH(); window.addEventListener('resize', setH);
+
+      const onScroll = () => header && header.classList.toggle('scrolled', window.scrollY > 10);
+      onScroll(); window.addEventListener('scroll', onScroll, {passive:true});
+
       if(toggle){
         toggle.addEventListener('click', function(){
           const opened = header.classList.toggle('open');
           toggle.setAttribute('aria-expanded', String(opened));
         });
-        header.querySelectorAll('.menu a').forEach(a => a.addEventListener('click', ()=>{
-          header.classList.remove('open'); toggle.setAttribute('aria-expanded','false');
-        }));
+        // Close when clicking menu links or language buttons (mobile)
+        document.addEventListener('click', function(e){
+          const t = e.target.closest('.menu a, .menu .lang-btn');
+          if(t && window.innerWidth <= 920){
+            header.classList.remove('open'); toggle.setAttribute('aria-expanded','false');
+          }
+        });
       }
     })();
 
-    // i18n (เหลือเฉพาะ key ที่ใช้)
+    // Back button on hero (with fallback)
+    (function(){
+      const btn = document.getElementById('backBtn'); if(!btn) return;
+      btn.addEventListener('click', function(e){
+        e.preventDefault();
+        try{
+          const ref=document.referrer;
+          if(ref && new URL(ref).origin===location.origin){ history.back(); return; }
+        }catch(_){}
+        // Fallback: go Home
+        location.href='https://www.baumechemical.com/';
+      });
+    })();
+
+    // i18n (only keys used) + shared language buttons (desktop + mobile)
     const I18N = {
       th:{
+        btn_back:"ย้อนกลับ",
         title:"ไม่พบหน้านี้ (404) | Baume Chemical",
         ogtitle:"404 • ไม่พบหน้านี้",
         ogdesc:"เราไม่พบหน้าที่คุณต้องการ กลับไปหน้าแรกได้เลย",
@@ -225,6 +315,7 @@
         c1_btn_top:"ไปหน้า Home"
       },
       en:{
+        btn_back:"Back",
         title:"Page not found (404) | Baume Chemical",
         ogtitle:"404 • Page not found",
         ogdesc:"We couldn’t find that page. Head back home.",
@@ -236,18 +327,31 @@
     function applyLang(lang){
       const L = (lang==='en') ? 'en' : 'th';
       document.documentElement.lang = L;
+
       document.querySelectorAll('[data-i18n-key]').forEach(n=>{
-        const k = n.getAttribute('data-i18n-key'); const v = I18N[L][k];
+        const k = n.getAttribute('data-i18n-key');
+        const v = I18N[L][k];
         if(typeof v!=='undefined') n.textContent = v;
       });
       document.title = I18N[L].title;
       document.querySelector('meta[property="og:title"]')?.setAttribute('content', I18N[L].ogtitle);
       document.querySelector('meta[property="og:description"]')?.setAttribute('content', I18N[L].ogdesc);
+
+      // Update state for all language buttons
+      document.querySelectorAll('.lang-btn').forEach(btn=>{
+        btn.setAttribute('aria-pressed', String(btn.dataset.lang===L));
+      });
+
       try{ localStorage.setItem('lang', L);}catch(e){}
     }
     (function initLang(){
-      const saved = (typeof localStorage!=='undefined' && localStorage.getItem('lang')) || 'th';
+      let saved='th';
+      try{
+        const v=localStorage.getItem('lang');
+        if(v==='en'||v==='th') saved=v;
+      }catch(e){}
       applyLang(saved);
+      document.querySelectorAll('.lang-btn').forEach(btn=> btn.addEventListener('click', ()=> applyLang(btn.dataset.lang)));
     })();
   </script>
 
