--- a/products/polishing/aluminum-electropolishing-solution.html
+++ b/products/polishing/aluminum-electropolishing-solution.html
@@ -7,7 +7,7 @@
   <!-- === SEO: Title, Description, Canonical, OG/Twitter === -->
   <title data-i18n-key="meta_title">EP 8539 — น้ำยากัดเงาอลูมิเนียม (Electropolishing) | Baume Chemical</title>
   <meta name="description" content="EP 8539 ช่วยให้ผิวอลูมิเนียมเรียบเงา ลบคม ไม่เกิดควัน NOx ช่วงทำงาน 65–80 °C, 12–24 V, 20–80 A/dm² ภายใน 2–16 นาที พร้อมแนวทางดูแลบ่อและข้อกำหนดอุปกรณ์">
-  <link rel="canonical" href="https://www.baumechemical.com/ep-8539.html">
+  <link rel="canonical" href="https://www.baumechemical.com/products/polishing/aluminum-electropolishing-solution.html">
   <meta name="robots" content="index,follow,max-image-preview:large">
   <meta name="theme-color" content="#2c5e4e">
 
@@ -17,7 +17,7 @@
   <meta property="og:locale:alternate" content="en_US">
   <meta property="og:title" content="EP 8539 — น้ำยากัดเงาอลูมิเนียม (Electropolishing)">
   <meta property="og:description" content="ผิวเงาแบบกระจก ลบคมไว ไม่มีควัน NOx • 65–80 °C • 12–24 V • 20–80 A/dm² • 2–16 นาที">
-  <meta property="og:url" content="https://www.baumechemical.com/ep-8539.html">
+  <meta property="og:url" content="https://www.baumechemical.com/products/polishing/aluminum-electropolishing-solution.html">
   <meta property="og:image" content="https://img2.pic.in.th/pic/image0-5.jpeg">
   <meta property="og:image:alt" content="EP 8539 — น้ำยากัดเงาอลูมิเนียม">
   <meta name="twitter:card" content="summary_large_image">
