--- a/products/polishing/steel-electropolishing-solution.html
+++ b/products/polishing/steel-electropolishing-solution.html
@@ -7,6 +7,7 @@
   <title data-i18n-key="meta_title">Steel Brite Dip — น้ำยากัดเงาชิ้นงานเหล็ก | Baume Chemical</title>
   <meta name="description" content="Steel Brite Dip ทำความสะอาดหลังล้างไขมัน/กัดกรด เพิ่มเงา กัดคราบสเกลด่างดำเหล็กคาร์บอนต่ำ ใช้คู่ไฮโดรเจนเปอร์ออกไซด์ ทำงานอุณหภูมิห้อง 18–32 °C แช่ 30 วินาที–5 นาที พร้อมสัดส่วนผสม การใช้งาน การดูแล และตัวอย่างผสม 40 ลิตร">
   <meta name="robots" content="index,follow,max-image-preview:large">
+  <link rel="canonical" href="https://www.baumechemical.com/products/polishing/steel-electropolishing-solution.html">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph -->
@@ -14,6 +15,7 @@
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" content="Steel Brite Dip — Steel Bright Dip">
   <meta property="og:description" content="Brightens steel after pickling, removes dark scale on low-carbon steel. Room temp 18–32 °C, 30 s–5 min. With H2O2.">
+  <meta property="og:url" content="https://www.baumechemical.com/products/polishing/steel-electropolishing-solution.html">
   <meta property="og:image" content="https://i.imgur.com/FHHDk78.jpeg">
   <meta name="twitter:card" content="summary_large_image">
 
