upload all files

--- a/products/protective/troubleshootingelectrophoreticlacquer.html
+++ b/products/protective/troubleshootingelectrophoreticlacquer.html
@@ -220,7 +220,7 @@
   <section class="hero">
     <!-- Back button -->
     <div class="back-wrap">
-      <a href="#" class="btn back" id="backBtn">
+      <a href="https://www.baumechemical.com/products/protective/index.html" class="btn back" id="backBtn">
         <svg viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M15 18l-6-6 6-6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
         <span data-i18n-key="btn_back">ย้อนกลับ</span>
       </a>
