upload all files

--- a/products/blackening/troubleshootingblackening.html
+++ b/products/blackening/troubleshootingblackening.html
@@ -8,6 +8,7 @@
   <title data-i18n-key="meta_title">Blackening - น้ำยาจุ่มดำ รมดำ | Baume Chemical</title>
   <meta name="description" content="น้ำยาจุ่มดำทองเหลือง-ทองแดงแบบหัวเชื้อเข้มข้น ให้ฟิล์มออกไซด์ตั้งแต่สีน้ำตาลอ่อน บรอนซ์ จนถึงดำสนิท ใช้งานได้ทั้งงานแขวน/ถังกลิ้ง จุ่ม 30–120 วินาที ที่อุณหภูมิห้อง พร้อมวิธีใช้และการแก้ปัญหา" />
   <meta name="robots" content="index,follow,max-image-preview:large" />
+  <link rel="canonical" href="https://www.baumechemical.com/products/blackening/">
   <meta name="theme-color" content="#2c5e4e" />
 
   <!-- Open Graph -->
@@ -15,6 +16,7 @@
   <meta property="og:site_name" content="Baume Chemical" />
   <meta property="og:title" content="Blackening - น้ำยาจุ่มดำ รมดำ" />
   <meta property="og:description" content="หัวเชื้อเข้มข้นสำหรับรมดำทองเหลือง-ทองแดง จุ่ม 30–120 วินาที ที่อุณหภูมิห้อง ได้เฉดตั้งแต่บรอนซ์ถึงดำสนิท" />
+  <meta property="og:url" content="https://www.baumechemical.com/products/blackening/">
   <meta property="og:image" content="https://img2.pic.in.th/pic/thumbnail85e2847383c30223.jpg" />
   <meta name="twitter:card" content="summary_large_image" />
 
