--- a/products/blackening/troubleshootingpatina.html
+++ b/products/blackening/troubleshootingpatina.html
@@ -7,6 +7,7 @@
   <title data-i18n-key="meta_title">PATINA - น้ำยาทำสนิมเขียว | Baume Chemical</title>
   <meta name="description" content="น้ำยาทำสนิมเขียวสำหรับทองแดง/ทองเหลือง เร่งปฏิกิริยาให้เกิดปาทีนา (verdigris) อย่างเป็นธรรมชาติ ควบคุมลวดลาย/โทนสีได้ ใช้วิธีพ่น จุ่ม หรือทา พร้อมแนวทางการใช้งานและข้อควรระวัง">
   <meta name="robots" content="index,follow,max-image-preview:large">
+  <link rel="canonical" href="https://www.baumechemical.com/products/blackening/">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph -->
@@ -14,6 +15,7 @@
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" content="PATINA - น้ำยาทำสนิมเขียว">
   <meta property="og:description" content="เร่งปฏิกิริยาสนิมเขียวบนทองแดง/ทองเหลือง โทนสีสวยเป็นธรรมชาติ ใช้แบบพ่น จุ่ม หรือทา">
+  <meta property="og:url" content="https://www.baumechemical.com/products/blackening/">
   <meta property="og:image" content="https://img2.pic.in.th/pic/image0-3ef39ee00701bff68.jpeg">
   <meta name="twitter:card" content="summary_large_image">
 
