--- a/products/equipment/labchemicals.html
+++ b/products/equipment/labchemicals.html
@@ -8,6 +8,7 @@
   <title data-i18n-key="page_title">สารเคมีห้องแล็บ & ไทเทรชัน | Baume Chemical</title>
   <meta name="description" content="รายการสารเคมีและสารละลายมาตรฐานที่ใช้ในห้องแล็บสำหรับงานชุบโลหะ: มาตรฐาน M/N, บัฟเฟอร์, อินดิเคเตอร์ (TH/EN).">
   <meta name="robots" content="index,follow,max-image-preview:large">
+  <link rel="canonical" href="https://www.baumechemical.com/products/equipment/">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph / Twitter -->
@@ -15,6 +16,7 @@
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" content="Lab & Titration Chemicals • Standards • Buffers • Indicators">
   <meta property="og:description" content="Compact bilingual list for plating labs (EN/TH).">
+  <meta property="og:url" content="https://www.baumechemical.com/products/equipment/">
   <meta property="og:image" content="https://i.imgur.com/3mWQsKe.jpeg">
   <meta name="twitter:card" content="summary_large_image">
 
