--- a/products/equipment/platingequipment.html
+++ b/products/equipment/platingequipment.html
@@ -8,6 +8,7 @@
   <title data-i18n-key="page_title">อุปกรณ์งานชุบ (Plating Tools) | Baume Chemical</title>
   <meta name="description" content="อุปกรณ์สำหรับกระบวนการชุบโลหะ: Barrel/Rack Tank, Rectifier, Ultra Filtration, Ultrasonic, Heater/Chiller, Centrifugal Dryer — เค้าโครงเดียวกับหน้าอื่นๆ ของ Baume (TH/EN).">
   <meta name="robots" content="index,follow,max-image-preview:large">
+  <link rel="canonical" href="https://www.baumechemical.com/products/equipment/">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph / Twitter -->
@@ -15,6 +16,7 @@
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" content="Plating Tools • Baume Chemical">
   <meta property="og:description" content="Barrel & Rack tanks, rectifier, UF, ultrasonic, heaters/chiller, centrifugal dryer (TH/EN).">
+  <meta property="og:url" content="https://www.baumechemical.com/products/equipment/">
   <meta property="og:image" content="https://i.imgur.com/R7gYwSN.jpeg">
   <meta name="twitter:card" content="summary_large_image">
 
