upload all files

--- a/products/platingcoating/index.html
+++ b/products/platingcoating/index.html
@@ -292,6 +292,17 @@
           <a class="more" href="cyanide-free-white-bronze/index.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
+
+            <!-- Tin -->
+      <article class="card lift reveal">
+        <picture><img src="https://img5.pic.in.th/file/secure-sv1/thumbnail1.jpg" alt="น้ำยาชุบดีบุกเงา Tin Plating"></picture>
+        <div class="body">
+          <div class="badge-row"><span class="badge">Tin</span><span class="badge">Bright</span></div>
+          <h3 data-i18n-key="ti_title">น้ำยาชุบดีบุกเงา</h3>
+          <p data-i18n-key="ti_desc">เป็นการชุบดีบุกเงาที่มีความเงาดี การกระจายตัว ไม่ด้านดำ และเป็นฝ้ามัว</p>
+          <a class="more" href="tinplating/index.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
+        </div>
+      </article>
     </div>
   </main>
 
@@ -431,7 +442,8 @@
         lacquer_title:"แลคเกอร์ไฟฟ้า (Electrolytic Lacquer)",
         lacquer_desc:"กันกัดกร่อนสูง เลือกได้หลายเฉดสี ใช้เดี่ยวได้โดยไม่ต้องชุบโลหะอื่น ทน UV สีไม่ซีดแม้โดนแดดนาน",
         wb_title:"ไวท์บรอนซ์แบบไม่ใช้ไซยาไนด์",
-        wb_desc:"สูตรปลอดไซยาไนด์ ลดความเสี่ยงด้านสิ่งแวดล้อม/ความปลอดภัย ผิวขาวเงิน เงา กระจายตัวดี คุมง่าย ลดต้นทุนบำบัด เหมาะกับถังแขวน/ถังกลิ้ง และโลหะฐานหลากหลาย",
+        ti_title: "น้ำยาชุบดีบุกเงา",
+        ti_desc: "เป็นการชุบดีบุกเงาที่มีความเงาดี การกระจายตัว ไม่ด้านดำ และเป็นฝ้ามัว",
         view_details:"ดูรายละเอียด →",
         footer_products:"หมวดผลิตภัณฑ์",
         footer_contact:"ติดต่อเรา",
@@ -461,7 +473,9 @@
         lacquer_title:"Electrolytic Lacquer",
         lacquer_desc:"High corrosion resistance in various shades; can be applied standalone. Excellent UV resistance for long-term color stability.",
         wb_title:"Cyanide-Free White Bronze",
+        ti_title: "Bright tin plating",
         wb_desc:"Cyanide-free formula reduces environmental/safety risk. Silver-white bright finish with excellent distribution, easy control, lower treatment cost; suitable for rack/barrel and many substrates.",
+        ti_desc: "This is a bright tin plating solution that provides a high-gloss finish with excellent deposit distribution. It is free from dullness, blackening, or haziness",
         view_details:"View Details →",
         footer_products:"Products",
         footer_contact:"Contact Us",
