upload all files

--- a/products/platingcoating/tinplating/index.html
+++ b/products/platingcoating/tinplating/index.html
@@ -176,7 +176,7 @@
   <header class="hero">
     <a class="back-chip" href="https://www.baumechemical.com/" data-i18n-key="back_home">← กลับเมนูหลัก</a>
     <div class="wrap" style="display:block; padding:28px 16px; max-width:1200px; margin:auto">
-      <h1 data-i18n-key="hero_title">คู่มือการใช้งาน BASn 4140: น้ำยาชุบดีบุกเงา</h1>
+      <h1 data-i18n-key="hero_title">BASn 4140: น้ำยาชุบดีบุกเงา</h1>
       <p data-i18n-key="hero_tagline">สัดส่วนการผสม ขั้นตอนการชุบ พารามิเตอร์การทำงาน อุปกรณ์ที่จำเป็น และเหตุผลที่ควรใช้ Tin Anode 99.9%</p>
     </div>
   </header>
@@ -407,10 +407,10 @@
   <script>
     const I18N = {
       th: {
-        title:"คู่มือ BASn 4140 — น้ำยาชุบดีบุกเงา | Baume Chemical Blog",
+        title:"BASn 4140 — น้ำยาชุบดีบุกเงา | Baume Chemical Blog",
         nav_home:"Home", nav_about:"About us", nav_products:"Products", nav_contact:"Contact Us", nav_blog:"Blog",
         back_home:"← กลับเมนูหลัก",
-        hero_title:"คู่มือการใช้งาน BASn 4140: น้ำยาชุบดีบุกเงา",
+        hero_title:"BASn 4140: น้ำยาชุบดีบุกเงา",
         hero_tagline:"สัดส่วนการผสม ขั้นตอนการชุบ พารามิเตอร์การทำงาน อุปกรณ์ที่จำเป็น และเหตุผลที่ควรใช้ Tin Anode 99.9%",
 
         toc_title:"สารบัญ", toc_intro:"ภาพรวมผลิตภัณฑ์", toc_makeup:"ส่วนที่ 1: การเตรียมสารละลาย (Make-up)", toc_process:"ส่วนที่ 2: ขั้นตอนการชุบ", toc_conditions:"ส่วนที่ 3: สภาพการทำงาน & อุปกรณ์", toc_anode:"ทำไมต้อง Tin Anode 99.9%",
@@ -480,7 +480,7 @@
         title:"BASn 4140 Bright Tin Plating — Practical Guide | Baume Chemical Blog",
         nav_home:"Home", nav_about:"About us", nav_products:"Products", nav_contact:"Contact Us", nav_blog:"Blog",
         back_home:"← Back to Home",
-        hero_title:"BASn 4140 Bright Tin Plating: How to Use",
+        hero_title:"BASn 4140 Bright Tin Plating",
         hero_tagline:"Make-up ratios, plating steps, operating window, required equipment, and why to use 99.9% Tin Anode",
 
         toc_title:"Contents", toc_intro:"Product overview", toc_makeup:"Part 1: Make-up", toc_process:"Part 2: Plating steps", toc_conditions:"Part 3: Operating conditions & equipment", toc_anode:"Why 99.9% Tin Anode",
